--- a/Unit 02_Forms/04_Input Atrributes/ass1.html
+++ b/Unit 02_Forms/04_Input Atrributes/ass1.html
@@ -15,14 +15,20 @@
 <h1>Nonsensical Bowling Quiz</h1>
 
 1. When did the PBA start?<br>
-<input type="radio" id="" name="Answer" value="">
-    <label for=""></label><br>
-    <input type="radio" id="9th" name="Grade" value="9th">
-    <label for="9th">9th</label><br>
-    <input type="radio" id="9th" name="Grade" value="9th">
-    <label for="9th">9th</label><br>
-    <input type="radio" id="9th" name="Grade" value="9th">
-    <label for="9th">9th</label><br>
+
+<input type="radio" id="A" name="Answer" value="">
+    <label for="">1942</label><br>
+    <input type="radio" id="B" name="Answer" value="">
+    <label for="">1900</label><br>
+    <input type="radio" id="C" name="Answer" value="">
+    <label for="">1958</label><br>
+    <input type="radio" id="D" name="Answer" value="">
+    <label for="">2011</label><br>
+
+
+<br>
+<br>
+2. How many titles does E.J. Tackett have?
 
 </form>
 
