--- a/Unit 02_Forms/04_Input Atrributes/ass1.html
+++ b/Unit 02_Forms/04_Input Atrributes/ass1.html
@@ -28,7 +28,36 @@
 
 <br>
 <br>
-2. How many titles does E.J. Tackett have?
+2. How many titles does E.J. Tackett have?<br>
+
+<input type="radio" id="A" name="Answer" value="">
+    <label for="">21</label><br>
+    <input type="radio" id="A" name="Answer" value="">
+    <label for="">12</label><br>
+    <input type="radio" id="A" name="Answer" value="">
+    <label for="">19</label><br>
+    <input type="radio" id="A" name="Answer" value="">
+    <label for="">42</label><br>
+
+<br>
+<br>
+<br>
+<br>
+3. Who popularized the 2 handed bowling style?<br>
+
+<input type="radio" id="A" name="Answer" value="">
+    <label for="">Jason Belmonte</label><br>
+    <input type="radio" id="A" name="Answer" value="">
+    <label for="">Osku Palermaa</label><br>
+    <input type="radio" id="A" name="Answer" value="">
+    <label for="">Both A and B</label><br>
+    <input type="radio" id="A" name="Answer" value="">
+    <label for="">none of the above</label><br>
+
+<br>
+<br>
+<br>
+<input type="submit" name="" id="submit">
 
 </form>
 
