--- a/Unit 04_Objects, Events, Strings, and Numbers/05_Math and Random/index.html
+++ b/Unit 04_Objects, Events, Strings, and Numbers/05_Math and Random/index.html
@@ -19,6 +19,18 @@
         <label for="result">Result: </label><br>
         <p id="result"></p>
 
+        <label for="input2">Number2: </label><br>
+        <input type="text" id="input2" name="input2">
+        <br>
+
+        <br>
+        <button type="button" onclick="takeAbsoluteValue()">Absolute value</button>
+        <br>
+        <br>
+        <label for="result">Result: </label><br>
+        <p id="result"></p>
+
+
         <script src="script.js"></script>
 
         //TODO add form stuff for absolute value
