--- a/Unit 04_Objects, Events, Strings, and Numbers/05_Math and Random/index.html
+++ b/Unit 04_Objects, Events, Strings, and Numbers/05_Math and Random/index.html
@@ -31,6 +31,44 @@
         <p id="result"></p>
 
 
+        <label for="input3">Number3: </label><br>
+        <input type="text" id="input3" name="input3">
+        <br>
+
+        <br>
+        <button type="button" onclick="takeSine()">Sine</button>
+        <br>
+        <br>
+        <label for="result">Result: </label><br>
+        <p id="result"></p>
+
+
+        <label for="input4">Number4: </label><br>
+        <input type="text" id="input4" name="input4">
+        <br>
+
+        <br>
+        <button type="button" onclick="takeCosine()">Cosine</button>
+        <br>
+        <br>
+        <label for="result">Result: </label><br>
+        <p id="result"></p>
+
+
+        <label for="input5">Number5: </label><br>
+        <input type="text" id="input5" name="input5">
+        <br>
+
+        <br>
+        <button type="button" onclick="takeTangent()">Tangent</button>
+        <br>
+        <br>
+        <label for="result">Result: </label><br>
+        <p id="result"></p>
+
+        
+
+
         <script src="script.js"></script>
 
         //TODO add form stuff for absolute value
